@startuml
title 3.5 Transcript Module Class Diagram (Report 4 Embedded Version)

top to bottom direction
hide circle

skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam dpi 140
skinparam titleFontSize 18
skinparam packageFontSize 16
skinparam classFontSize 14
skinparam classAttributeFontSize 12
skinparam ArrowFontSize 11
skinparam nodesep 28
skinparam ranksep 36
skinparam packageTitleAlignment left
skinparam packageStyle rectangle
skinparam packageBackgroundColor White
skinparam packageBorderColor Black
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam ArrowColor Black

package "API Layer" as ApiLayer {
  class TranscriptsController <<boundary>> {
    - transcriptService: ITranscriptService
    --
    + GetTranscript(roomId: Guid): Task<Result>
    + UpdateSegment(segmentId: Guid, request: UpdateSegmentRequest): Task<Result>
    + ExportTranscript(roomId: Guid, format: String): Task<Result>
  }

  class GlossariesController <<boundary>> {
    - globalGlossaryService: IGlobalGlossaryService
    --
    + CreateGlossary(request: CreateGlossaryRequest): Task<Result>
    + AddTerm(glossaryId: Guid, request: AddTermRequest): Task<Result>
  }

  TranscriptsController -[hidden]right- GlossariesController
}

package "Application Layer" as ApplicationLayer {
  class TranscriptService <<control>> {
    - transcriptRepository: ITranscriptRepository
    - segmentRepository: ITranscriptSegmentRepository
    - unitOfWork: IUnitOfWork
    --
    + CompileAndGenerateArtifactsAsync(roomId: Guid): Task<Result>
    + UpdateSegmentTextAsync(segmentId: Guid, newText: String, userId: Guid): Task<Result>
    + ExportTranscriptAsync(transcriptId: Guid, format: String): Task<Result>
  }

  class GlobalGlossaryService <<control>> {
    - glossaryRepository: IGlossaryRepository
    - unitOfWork: IUnitOfWork
    --
    + BulkImportAsync(glossaryId: Guid, terms: List<GlossaryTermDto>): Task<Result>
    + MatchGlossaryTermsAsync(text: String, sourceLang: String, targetLang: String): Task<List<GlossaryTermDto>>
  }

  TranscriptService -[hidden]right- GlobalGlossaryService
}

package "Infrastructure Layer" as InfrastructureLayer {
  class TranscriptDbContext <<control>> {
    + Transcripts: DbSet<Transcript>
    + TranscriptSegments: DbSet<TranscriptSegment>
    + TranscriptCorrections: DbSet<TranscriptCorrection>
    + TranslationContents: DbSet<TranslationContent>
    + Glossaries: DbSet<Glossary>
    + GlossaryTerms: DbSet<GlossaryTerm>
    --
    + SaveChangesAsync(): Task<Int>
  }

  class UnitOfWork <<control>> {
    - dbContext: TranscriptDbContext
    --
    + SaveChangesAsync(): Task<Int>
    + BeginTransactionAsync(): Task
    + CommitTransactionAsync(): Task
  }

  class TranscriptRepository <<control>> {
    - dbContext: TranscriptDbContext
    --
    + GetByRoomIdAsync(roomId: Guid): Task<Transcript>
    + AddAsync(transcript: Transcript): Task
  }

  class TranscriptSegmentRepository <<control>> {
    - dbContext: TranscriptDbContext
    --
    + GetSegmentsByTranscriptIdAsync(transcriptId: Guid): Task<List<TranscriptSegment>>
    + AddAsync(segment: TranscriptSegment): Task
  }

  class GlossaryRepository <<control>> {
    - dbContext: TranscriptDbContext
    --
    + GetByWorkspaceIdAsync(workspaceId: Guid): Task<List<Glossary>>
    + AddAsync(glossary: Glossary): Task
  }

  TranscriptRepository -[hidden]right- TranscriptSegmentRepository
  TranscriptSegmentRepository -[hidden]right- GlossaryRepository
  TranscriptDbContext -[hidden]right- UnitOfWork
  TranscriptRepository -[hidden]down- TranscriptDbContext
}

package "Domain Layer" as DomainLayer {
  class Transcript <<entity>> {
    - Id: Guid
    - WorkspaceId: Guid
    - TranslationRoomId: Guid
    - SourceLanguage: String
    - TotalSegments: Int
    - TotalDurationMs: Long
    - IsCurrent: Boolean
    --
  }

  class TranscriptSegment <<entity>> {
    - Id: Guid
    - TranscriptId: Guid
    - SpeakerParticipantId: Guid
    - SpeakerName: String
    - OriginalText: String
    - SequenceOrder: Int
    - IsCorrected: Boolean
    --
  }

  class TranscriptCorrection <<entity>> {
    - Id: Guid
    - SegmentId: Guid
    - UserId: Guid
    - OriginalText: String
    - CorrectedText: String
    --
  }

  class TranslationContent <<entity>> {
    - Id: Guid
    - WorkspaceId: Guid
    - TargetLanguage: String
    - TranslatedText: String
    - TranslatorModel: String
    --
  }

  class Glossary <<entity>> {
    - Id: Guid
    - WorkspaceId: Guid
    - Name: String
    - SourceLanguage: String
    - TargetLanguage: String
    --
  }

  class GlossaryTerm <<entity>> {
    - Id: Guid
    - GlossaryId: Guid
    - SourceTerm: String
    - TargetTerm: String
    --
  }

  Transcript -[hidden]right- TranscriptSegment
  TranscriptSegment -[hidden]right- TranscriptCorrection
  TranscriptCorrection -[hidden]right- TranslationContent
  TranslationContent -[hidden]right- Glossary
  Glossary -[hidden]right- GlossaryTerm
}

package "External Systems" as ExternalSystems {
  class OpenAI <<external system>> {
    - apiEndpoint: String
    --
    + CompleteAsync(prompt: String): Task<String>
  }

  class VectorDatabase <<external system>> {
    - collectionName: String
    --
    + SearchAsync(queryVector: List<Single>): Task<List<String>>
  }

  OpenAI -[hidden]right- VectorDatabase
}

TranscriptsController --> TranscriptService
GlossariesController --> GlobalGlossaryService

TranscriptService ..> TranscriptRepository
TranscriptService ..> TranscriptSegmentRepository
TranscriptService ..> UnitOfWork
TranscriptService ..> OpenAI

GlobalGlossaryService ..> GlossaryRepository
GlobalGlossaryService ..> VectorDatabase
GlobalGlossaryService ..> UnitOfWork

TranscriptRepository ..> TranscriptDbContext
TranscriptSegmentRepository ..> TranscriptDbContext
GlossaryRepository ..> TranscriptDbContext
UnitOfWork ..> TranscriptDbContext

TranscriptRepository ..> Transcript : persists
TranscriptSegmentRepository ..> TranscriptSegment : persists

Transcript *-- "0..*" TranscriptSegment
TranscriptSegment *-- "0..*" TranscriptCorrection
TranscriptSegment *-- "0..*" TranslationContent
Glossary *-- "0..*" GlossaryTerm

@enduml
